Add Original System

--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -156,3 +156,17 @@ pre {
 h3{
 	font-size: larger;
 }
+
+.approver-show{
+	display: flex;
+	justify-content: space-between;
+	border: none;
+}
+
+.approver-name{
+	width: 50%;
+}
+
+.approver-button{
+	width: 30%;
+}
